--- a/index.html
+++ b/index.html
@@ -38,7 +38,38 @@
 
 <body class="font-lato">
     <header>
-
+        <!-- Navbar Start -->
+        <div class="navbar bg-base-100">
+            <div class="navbar-start">
+              <!-- <div class="dropdown">
+                <label tabindex="0" class="btn btn-ghost lg:hidden">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                </label>
+                <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                  <li><a>Item 1</a></li>
+                  <li> <a>Parent</a></li>
+                  <li><a>Item 3</a></li>
+                </ul>
+              </div> -->
+             <div class="flex items-center gap-3">
+                <img src="./images/logo.png" alt="">
+                <a class="normal-case text-2xl lg:text-[2.5rem] font-bold">Fruit Burst</a>
+             </div>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+              <ul class="menu menu-horizontal px-1">
+                <li><a>Home</a></li>
+                <li><a>About Us</a></li>
+                <li><a>Shop</a></li>
+                <li><a>All Fruits</a></li>
+              </ul>
+            </div>
+            <div class="navbar-end">
+                <div class="form-control">
+                    <input type="text" placeholder="Search here" class="input rounded-[50px] text-[#12121266] input-bordered md:w-auto" />
+                </div>
+            </div>
+          </div>
     </header>
     <main>
 
