--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
               <a class="normal-case text-2xl lg:text-[2.5rem] font-bold text-white">Fruit Burst</a>
            </div>
             <div class="lg:flex lg:justify-center hidden">
-                <div class="form-control">
-                    <input type="text" placeholder="Search here" class="input lg:w-72 rounded-[50px] text-[#12121266] input-bordered md:w-auto focus:outline-none" />
+                <div class="form-control relative">
+                    <input type="text" placeholder="Search here" class="input lg:w-72 rounded-[50px] text-[#12121266] input-bordered md:w-auto focus:outline-none"/>
+                    <i class="fa-solid fa-magnifying-glass absolute bottom-[14px] text-[#121212] right-4"></i>
                 </div>
             </div>
             
