--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        'btn-color':'#F85559',
                     }
                 }
             }
@@ -81,11 +82,57 @@
                     <i class="fa-solid fa-magnifying-glass absolute bottom-[14px] text-[#121212] right-4"></i>
                 </div>
             </div>
-            
           </div>
     </header>
-    <main>
+    <main class="container mx-auto">
+      <!-- Feature Seciton Start -->
+      <section class="max-w-7xl mx-auto">
+        <div class="carousel w-full">
+          <!-- Slide 1 -->
+          <div id="slide1" class="carousel-item relative w-full">
+            
+           <div class="w-full h-[500px] bg-no-repeat bg-cover" style="background-image: url('./images/banner1.png');">
+            <div >
+              <div class="absolute inset-0 bg-gray-900 opacity-50"></div>
+            </div>
+            <div class="grid grid-cols-1 w-3/5 text-center gap-7 mx-auto pt-20 relative">
+              <h3 class="text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
+              <p class="text-xl font-medium text-white">We supply highly quality organic products</p>
+              <div>
+                <button class="btn bg-btn-color text-white hover:bg-btn-color border-0">Shop Now</button>
+              </div>
+            </div>
+           </div>
+            <!-- <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide4" class="btn btn-circle">❮</a> 
+              <a href="#slide2" class="btn btn-circle">❯</a>
+            </div> -->
+          </div> 
+          <!-- Slide 2 -->
+          <div id="slide2" class="carousel-item relative w-full">
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide1" class="btn btn-circle">❮</a> 
+              <a href="#slide3" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide3" class="carousel-item relative w-full">
+            <img src="/images/stock/photo-1414694762283-acccc27bca85.jpg" class="w-full" />
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide2" class="btn btn-circle">❮</a> 
+              <a href="#slide4" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide4" class="carousel-item relative w-full">
+            <img src="/images/stock/photo-1665553365602-b2fb8e5d1707.jpg" class="w-full" />
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide3" class="btn btn-circle">❮</a> 
+              <a href="#slide1" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+        </div>
 
+        </div>
+      </section>
     </main>
     <footer>
 
