feature section responsive for mobile

--- a/index.html
+++ b/index.html
@@ -88,23 +88,23 @@
   <main class="container mx-auto">
     <!-- Feature Seciton Start -->
     <section class="max-w-7xl mx-auto">
-      <div class="carousel w-full lg:rounded-lg">
+      <div class="carousel lg:w-full lg:rounded-lg mx-5">
         <!-- Slide 1 -->
         <div id="slide1" class="carousel-item relative w-full">
 
-          <div class="w-full h-[550px] bg-no-repeat bg-cover" style="background-image: url('./images/banner1.png');">
+          <div class="lg:w-full lg:h-[550px] h-64 bg-no-repeat bg-cover" style="background-image: url('./images/banner1.png');">
             <div>
               <div class="absolute inset-0 bg-gray-900 opacity-50"></div>
             </div>
-            <div class="grid grid-cols-1 lg:w-3/5 text-center gap-7 mx-auto pt-20 relative">
-              <h3 class="lg:text-7xl text-5xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
-              <p class="text-xl font-medium text-white">We supply highly quality organic products</p>
+            <div class="grid grid-cols-1 lg:w-3/5 text-center lg:gap-7 gap-4 mx-auto lg:pt-20  pt-10 relative">
+              <h3 class="lg:text-7xl text-4xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
+              <p class="lg:text-xl text-base font-medium text-white">We supply highly quality organic products</p>
               <div>
                 <button class="btn bg-btn-color text-white hover:bg-btn-color border-0">Shop Now</button>
               </div>
             </div>
           </div>
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 lg:top-1/2 top-3/4">
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
             <a href="#slide4" class="btn btn-circle bg-black text-white hover:text-black border-0">❮</a>
             <a href="#slide2" class="btn btn-circle  bg-black text-white hover:text-black border-0">❯</a>
           </div>
@@ -113,65 +113,65 @@
         
         <!-- Slide 2 -->
         <div id="slide2" class="carousel-item relative w-full">
-          <div class="w-full h-[500px] bg-no-repeat bg-cover" style="background-image: url('./images/banner2.png');">
+          <div class="lg:w-full lg:h-[550px] h-64 bg-no-repeat bg-cover" style="background-image: url('./images/banner2.png');">
             <div>
               <div class="absolute inset-0 bg-gray-900 opacity-50"></div>
             </div>
-            <div class="grid grid-cols-1 w-3/5 text-center gap-7 mx-auto pt-20 relative">
-              <h3 class="text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
-              <p class="text-xl font-medium text-white">We supply highly quality organic products</p>
+            <div class="grid grid-cols-1 lg:w-3/5 text-center lg:gap-7 gap-4 mx-auto lg:pt-20  pt-10 relative">
+              <h3 class="lg:text-7xl text-4xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
+              <p class="lg:text-xl text-base font-medium text-white">We supply highly quality organic products</p>
               <div>
                 <button class="btn bg-btn-color text-white hover:bg-btn-color border-0">Shop Now</button>
               </div>
             </div>
           </div>
 
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
             <a href="#slide1" class="btn btn-circle bg-black text-white hover:text-black border-0">❮</a>
             <a href="#slide3" class="btn btn-circle bg-black text-white hover:text-black border-0">❯</a>
           </div>
         </div>
         <!-- Slide 3 -->
         <div id="slide3" class="carousel-item relative w-full">
-          <div class="w-full h-[500px] bg-no-repeat bg-cover" style="background-image: url('./images/banner3.png');">
+          <div class="lg:w-full lg:h-[550px] h-64 bg-no-repeat bg-cover" style="background-image: url('./images/banner3.png');">
             <div>
               <div class="absolute inset-0 bg-gray-900 opacity-50"></div>
             </div>
-            <div class="grid grid-cols-1 w-3/5 text-center gap-7 mx-auto pt-20 relative">
-              <h3 class="text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
-              <p class="text-xl font-medium text-white">We supply highly quality organic products</p>
+            <div class="grid grid-cols-1 lg:w-3/5 text-center lg:gap-7 gap-4 mx-auto lg:pt-20  pt-10 relative">
+              <h3 class="lg:text-7xl text-4xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
+              <p class="lg:text-xl text-base font-medium text-white">We supply highly quality organic products</p>
               <div>
                 <button class="btn bg-btn-color text-white hover:bg-btn-color border-0">Shop Now</button>
               </div>
             </div>
           </div>
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
             <a href="#slide2" class="btn btn-circle bg-black text-white hover:text-black border-0">❮</a>
             <a href="#slide4" class="btn btn-circle bg-black text-white hover:text-black border-0">❯</a>
           </div>
         </div>
         <!-- Slide 4 -->
         <div id="slide4" class="carousel-item relative w-full">
-          <div class="w-full h-[500px] bg-no-repeat bg-cover" style="background-image: url('./images/banner4.png');">
+          <div class="lg:w-full lg:h-[550px] h-64 bg-no-repeat bg-cover" style="background-image: url('./images/banner4.png');">
             <div>
               <div class="absolute inset-0 bg-gray-900 opacity-50"></div>
             </div>
-            <div class="grid grid-cols-1 w-3/5 text-center gap-7 mx-auto pt-20 relative">
-              <h3 class="text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
-              <p class="text-xl font-medium text-white">We supply highly quality organic products</p>
+            <div class="grid grid-cols-1 lg:w-3/5 text-center lg:gap-7 gap-4 mx-auto lg:pt-20  pt-10 relative">
+              <h3 class="lg:text-7xl text-4xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
+              <p class="lg:text-xl text-base font-medium text-white">We supply highly quality organic products</p>
               <div>
                 <button class="btn bg-btn-color text-white hover:bg-btn-color border-0">Shop Now</button>
               </div>
             </div>
           </div>
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
             <a href="#slide3" class="btn btn-circle bg-black text-white hover:text-black border-0">❮</a>
             <a href="#slide1" class="btn btn-circle bg-black text-white hover:text-black border-0">❯</a>
           </div>
         </div>
       </div>
 
-      <div class="grid grid-cols-5 max-w-5xl mx-auto bg-white shadow-lg py-12 px-16 rounded-lg gap-20 text-center -mt-32 relative">
+      <div class="lg:grid lg:grid-cols-5 lg:max-w-5xl mx-auto bg-white shadow-lg py-12 px-16 rounded-lg gap-20 text-center -mt-32 relative hidden">
         <div class="flex-col">
           <img src="./images/fruit1.png" alt="">
           <p class="text-xl font-medium mt-2">Strawberry</p>
