deal of the day section created

--- a/index.html
+++ b/index.html
@@ -193,7 +193,46 @@
           <p class="text-xl font-medium mt-2">Mango</p>
         </div>
       </div>
-      
+    </section>
+    <!-- Feature Section End -->
+
+    <!-- Deal Of the Section Start -->
+
+    <section class="max-w-7xl mx-auto">
+      <div>
+        <h3>Deal of the day</h3>
+        <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+      </div>
+      <div>
+
+        <div class="flex gap-5">
+          <div>
+            <span class="countdown font-mono text-4xl">
+              <span style="--value:15;"></span>
+            </span>
+            days
+          </div> 
+          <div>
+            <span class="countdown font-mono text-4xl">
+              <span style="--value:10;"></span>
+            </span>
+            hours
+          </div> 
+          <div>
+            <span class="countdown font-mono text-4xl">
+              <span style="--value:24;"></span>
+            </span>
+            min
+          </div> 
+          <div>
+            <span class="countdown font-mono text-4xl">
+              <span style="--value:58;"></span>
+            </span>
+            sec
+          </div>
+        </div>
+      </div>
+
     </section>
   </main>
   <footer>
