--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         <!-- Slide 1 -->
         <div id="slide1" class="carousel-item relative w-full">
 
-          <div class="lg:w-full lg:h-[550px] h-64 bg-no-repeat bg-cover" style="background-image: url('./images/banner1.png');">
+          <div class="lg:w-full lg:h-[550px] h-64 bg-no-repeat bg-cover"
+            style="background-image: url('./images/banner1.png');">
             <div>
               <div class="absolute inset-0 bg-gray-900 opacity-50"></div>
             </div>
@@ -104,16 +105,18 @@
               </div>
             </div>
           </div>
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
             <a href="#slide4" class="btn btn-circle bg-black text-white hover:text-black border-0">❮</a>
             <a href="#slide2" class="btn btn-circle  bg-black text-white hover:text-black border-0">❯</a>
           </div>
-         </div>
-        
-        
+        </div>
+
+
         <!-- Slide 2 -->
         <div id="slide2" class="carousel-item relative w-full">
-          <div class="lg:w-full lg:h-[550px] h-64 bg-no-repeat bg-cover" style="background-image: url('./images/banner2.png');">
+          <div class="lg:w-full lg:h-[550px] h-64 bg-no-repeat bg-cover"
+            style="background-image: url('./images/banner2.png');">
             <div>
               <div class="absolute inset-0 bg-gray-900 opacity-50"></div>
             </div>
@@ -126,14 +129,16 @@
             </div>
           </div>
 
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
             <a href="#slide1" class="btn btn-circle bg-black text-white hover:text-black border-0">❮</a>
             <a href="#slide3" class="btn btn-circle bg-black text-white hover:text-black border-0">❯</a>
           </div>
         </div>
         <!-- Slide 3 -->
         <div id="slide3" class="carousel-item relative w-full">
-          <div class="lg:w-full lg:h-[550px] h-64 bg-no-repeat bg-cover" style="background-image: url('./images/banner3.png');">
+          <div class="lg:w-full lg:h-[550px] h-64 bg-no-repeat bg-cover"
+            style="background-image: url('./images/banner3.png');">
             <div>
               <div class="absolute inset-0 bg-gray-900 opacity-50"></div>
             </div>
@@ -145,14 +150,16 @@
               </div>
             </div>
           </div>
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
             <a href="#slide2" class="btn btn-circle bg-black text-white hover:text-black border-0">❮</a>
             <a href="#slide4" class="btn btn-circle bg-black text-white hover:text-black border-0">❯</a>
           </div>
         </div>
         <!-- Slide 4 -->
         <div id="slide4" class="carousel-item relative w-full">
-          <div class="lg:w-full lg:h-[550px] h-64 bg-no-repeat bg-cover" style="background-image: url('./images/banner4.png');">
+          <div class="lg:w-full lg:h-[550px] h-64 bg-no-repeat bg-cover"
+            style="background-image: url('./images/banner4.png');">
             <div>
               <div class="absolute inset-0 bg-gray-900 opacity-50"></div>
             </div>
@@ -164,14 +171,16 @@
               </div>
             </div>
           </div>
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
             <a href="#slide3" class="btn btn-circle bg-black text-white hover:text-black border-0">❮</a>
             <a href="#slide1" class="btn btn-circle bg-black text-white hover:text-black border-0">❯</a>
           </div>
         </div>
       </div>
 
-      <div class="lg:grid lg:grid-cols-5 lg:max-w-5xl mx-auto bg-white shadow-lg py-12 px-16 rounded-lg gap-20 text-center -mt-32 relative hidden">
+      <div
+        class="lg:grid lg:grid-cols-5 lg:max-w-5xl mx-auto bg-white shadow-lg py-12 px-16 rounded-lg gap-20 text-center -mt-32 relative hidden">
         <div class="flex-col">
           <img src="./images/fruit1.png" alt="">
           <p class="text-xl font-medium mt-2">Strawberry</p>
@@ -198,40 +207,45 @@
 
     <!-- Deal Of the Section Start -->
 
-    <section class="max-w-7xl mx-auto">
-      <div>
-        <h3>Deal of the day</h3>
-        <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-      </div>
-      <div>
-
-        <div class="flex gap-5">
-          <div>
-            <span class="countdown font-mono text-4xl">
-              <span style="--value:15;"></span>
-            </span>
-            days
-          </div> 
-          <div>
-            <span class="countdown font-mono text-4xl">
-              <span style="--value:10;"></span>
-            </span>
-            hours
-          </div> 
-          <div>
-            <span class="countdown font-mono text-4xl">
-              <span style="--value:24;"></span>
-            </span>
-            min
-          </div> 
-          <div>
-            <span class="countdown font-mono text-4xl">
-              <span style="--value:58;"></span>
-            </span>
-            sec
+    <section class="max-w-7xl mx-auto my-36">
+      <div class="flex justify-between">
+        <div class="w-1/2 mb-12">
+          <h3 class="text-5xl font-extrabold text-[#121212] mb-6">Deal of the day</h3>
+          <p class="font-medium text-[#0C0C0C99]">Contrary to popular belief, is not simply random text. It has roots in
+            a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+        </div>
+        <div>
+          <div class="flex gap-5 text-center mt-5">
+            <div class="flex-col ">
+              <span class="countdown font-extrabold text[#121212] text-5xl">
+                <span style="--value:15;"></i></span>
+              </span> 
+              <p class="font-medium text-[#0C0C0C99]">days</p>
+             </div>
+             <i class="fa-solid fa-ellipsis-vertical flex mt-3 text-lg text-[#0C0C0C99]"></i>
+            <div class="flex-col"> 
+              <span class="countdown font-extrabold text[#121212] text-5xl">
+                <span style="--value:10;"></span>
+              </span>
+              <p class="font-medium text-[#0C0C0C99]">hours</p>
+            </div>
+            <i class="fa-solid fa-ellipsis-vertical flex mt-3 text-lg text-[#0C0C0C99]"></i>
+            <div class="flex-col">
+              <span class="countdown font-extrabold text[#121212] text-5xl">
+                <span style="--value:24;"></span> </span>
+              <p class="font-medium text-[#0C0C0C99]">min</p>
+            </div>
+            <i class="fa-solid fa-ellipsis-vertical flex mt-3 text-lg text-[#0C0C0C99]"></i>
+            <div class="flex-col">
+              <span class="countdown font-extrabold text[#121212] text-5xl">
+                <span style="--value:57;"></span>
+              </span>
+              <p class="font-medium text-[#0C0C0C99]">sec</p>
+            </div>
           </div>
         </div>
       </div>
+
 
     </section>
   </main>
