--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         extend: {
           colors: {
             clifford: '#da373d',
-            'btn-color': '#F85559',
+            'primary-color': '#F85559',
+            'p-color': '#0C0C0C99',
           }
         }
       }
@@ -41,7 +42,7 @@
   <header class="max-w-7xl mx-auto">
     <!-- Navbar Start -->
 
-    <div class="navbar my-14 py-4 bg-[#F85559] rounded-[600px] px-5">
+    <div class="navbar my-14 py-4 bg-primary-color rounded-[600px] px-5">
       <!-- Nav For Small device -->
       <!-- <div class="navbar-start items-center lg:hidden gap-3 w-1/2">
                 <img src="./images/logo.png" alt="">
@@ -101,7 +102,7 @@
               <h3 class="lg:text-7xl text-4xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
               <p class="lg:text-xl text-base font-medium text-white">We supply highly quality organic products</p>
               <div>
-                <button class="btn bg-btn-color text-white hover:bg-btn-color border-0">Shop Now</button>
+                <button class="btn bg-primary-color text-white hover:bg-btn-color border-0">Shop Now</button>
               </div>
             </div>
           </div>
@@ -219,11 +220,11 @@
             <div class="flex-col ">
               <span class="countdown font-extrabold text[#121212] text-5xl">
                 <span style="--value:15;"></i></span>
-              </span> 
+              </span>
               <p class="font-medium text-[#0C0C0C99]">days</p>
-             </div>
-             <i class="fa-solid fa-ellipsis-vertical flex mt-3 text-lg text-[#0C0C0C99]"></i>
-            <div class="flex-col"> 
+            </div>
+            <i class="fa-solid fa-ellipsis-vertical flex mt-3 text-lg text-[#0C0C0C99]"></i>
+            <div class="flex-col">
               <span class="countdown font-extrabold text[#121212] text-5xl">
                 <span style="--value:10;"></span>
               </span>
@@ -245,7 +246,44 @@
           </div>
         </div>
       </div>
-
+      <!-- Card -->
+      <div class="text-center">
+        <div class="card card-compact border border-gray-200">
+          <figure><img src="./images/fruit6.png" class="py-12" alt="Shoes" /></figure>
+          <div>
+            <h2 class="text-2xl font-bold text-[#121212]">12.90$ - 18.85$!</h2>
+            <hr class="w-3/4 mx-auto my-6">
+            <p class="font-medium text-p-color">Apples</p>
+            <!-- Ratings -->
+            <div class="rating rating-md rating-half mt-7">
+              <input type="radio" name="rating-10" class="rating-hidden" />
+              <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
+              <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
+              <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
+              <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
+              <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" checked />
+              <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
+              <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
+              <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
+              <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
+              <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
+            </div>
+          </div>
+          <!-- Open the modal using ID.showModal() method -->
+          <button class="btn btn-link mb-12 mt-2 text-primary-color no-underline hover:no-underline text-lg font-bold" onclick="my_modal_2.showModal()">Details</button>
+          <dialog id="my_modal_2" class="modal">
+            <form method="dialog" class="modal-box">
+              <img src="./images/fruit6.png" alt="">
+              <h3>Apple</h3>
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              
+            </form>
+            <form method="dialog" class="modal-backdrop">
+              <button>close</button>
+            </form>
+          </dialog>
+        </div>
+      </div>
 
     </section>
   </main>
