--- a/index.html
+++ b/index.html
@@ -247,12 +247,12 @@
           </div>
         </div>
       </div>
-      <!-- Card -->
+      <!-- Card Container -->
       <div class="text-center flex gap-6">
         <!-- Card-1 -->
         <div class="card card-compact border border-[#0C0C0C1A] px-8">
           <figure>
-            <img src="./images/fruit6.png" class="py-10" alt="Shoes"/>
+            <img src="./images/fruit6.png" class="py-10" alt="Apple"/>
           </figure>
           <div>
             <h2 class="text-2xl font-bold text-[#121212]">12.90$ - 18.85$!</h2>
@@ -274,10 +274,10 @@
             </div>
           </div>
           <!-- Open the modal using ID.showModal() method -->
-          <button class="btn btn-link mb-12 mt-2 text-primary-color no-underline hover:no-underline text-lg font-bold" onclick="my_modal_2.showModal()">Details</button>
-          <dialog id="my_modal_2" class="modal">
+          <button class="btn btn-link mb-12 mt-2 text-primary-color no-underline hover:no-underline text-lg font-bold" onclick="apple.showModal()">Details</button>
+          <dialog id="apple" class="modal">
             <form method="dialog" class="modal-box">
-              <img src="./images/fruit6.png" class="mx-auto pt-14" alt="">
+              <img src="./images/fruit6.png" class="mx-auto pt-8" alt="">
               <h3 class="text-[2.5rem] font-extrabold text-h-color my-5">Apple</h3>
               <p class="text-p-color font-medium w-3/4 mx-auto">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               <div class="rating rating-md rating-half mt-7">
@@ -305,7 +305,7 @@
         </div>
         <!-- Card-2 -->
         <div class="card card-compact border border-[#0C0C0C1A] px-8">
-          <figure><img src="./images/fruit7.png" class="py-10" alt="Shoes" /></figure>
+          <figure><img src="./images/fruit7.png" class="py-9" alt="Orange" /></figure>
           <div>
             <h2 class="text-2xl font-bold text-[#121212]">12.90$ - 18.85$!</h2>
             <hr class="w-60 mx-auto my-6">
@@ -326,19 +326,19 @@
             </div>
           </div>
           <!-- Open the modal using ID.showModal() method -->
-          <button class="btn btn-link mb-12 mt-2 text-primary-color no-underline hover:no-underline text-lg font-bold" onclick="my_modal_2.showModal()">Details</button>
-          <dialog id="my_modal_2" class="modal">
+          <button class="btn btn-link mb-12 mt-2 text-primary-color no-underline hover:no-underline text-lg font-bold" onclick="orange.showModal()">Details</button>
+          <dialog id="orange" class="modal">
             <form method="dialog" class="modal-box">
-              <img src="./images/fruit6.png" class="mx-auto pt-14" alt="">
-              <h3 class="text-[2.5rem] font-extrabold text-h-color my-5">Apple</h3>
-              <p class="text-p-color font-medium w-60 mx-auto">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              <img src="./images/fruit7.png" class="mx-auto pt-8" alt="">
+              <h3 class="text-[2.5rem] font-extrabold text-h-color my-5">Orange</h3>
+              <p class="text-p-color font-medium w-72 mx-auto">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               <div class="rating rating-md rating-half mt-7">
                 <input type="radio" name="rating-10" class="rating-hidden" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" checked/>
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" checked />
+                <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1"  />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
@@ -357,7 +357,7 @@
         </div>
         <!-- Card-3 -->
         <div class="card card-compact border border-[#0C0C0C1A] px-8">
-          <figure><img src="./images/fruit8.png" class="py-10" alt="Shoes" /></figure>
+          <figure><img src="./images/fruit8.png" class="py-10" alt="Red Dragon" /></figure>
           <div>
             <h2 class="text-2xl font-bold text-[#121212]">12.90$ - 18.85$!</h2>
             <hr class="w-60 mx-auto my-6">
@@ -378,11 +378,11 @@
             </div>
           </div>
           <!-- Open the modal using ID.showModal() method -->
-          <button class="btn btn-link mb-12 mt-2 text-primary-color no-underline hover:no-underline text-lg font-bold" onclick="my_modal_2.showModal()">Details</button>
-          <dialog id="my_modal_2" class="modal">
+          <button class="btn btn-link mb-12 mt-2 text-primary-color no-underline hover:no-underline text-lg font-bold" onclick="red_dragon.showModal()">Details</button>
+          <dialog id="red_dragon" class="modal">
             <form method="dialog" class="modal-box">
-              <img src="./images/fruit6.png" class="mx-auto pt-14" alt="">
-              <h3 class="text-[2.5rem] font-extrabold text-h-color my-5">Apple</h3>
+              <img src="./images/fruit8.png" class="mx-auto pt-8" alt="">
+              <h3 class="text-[2.5rem] font-extrabold text-h-color my-5">Red Dragon</h3>
               <p class="text-p-color font-medium w-3/4 mx-auto">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               <div class="rating rating-md rating-half mt-7">
                 <input type="radio" name="rating-10" class="rating-hidden" />
@@ -390,8 +390,8 @@
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" checked />
-                <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1"  />
+                <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" checked/>
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
@@ -407,8 +407,9 @@
            
           </dialog>
         </div>
+        <!-- Card-4 -->
         <div class="card card-compact border border-[#0C0C0C1A] px-8">
-          <figure><img src="./images/fruit9.png" class="py-10" alt="Shoes" /></figure>
+          <figure><img src="./images/fruit9.png" class="py-10" alt="Banana" /></figure>
           <div>
             <h2 class="text-2xl font-bold text-[#121212]">12.90$ - 18.85$!</h2>
             <hr class="w-60 mx-auto my-6">
@@ -429,11 +430,11 @@
             </div>
           </div>
           <!-- Open the modal using ID.showModal() method -->
-          <button class="btn btn-link mb-12 mt-2 text-primary-color no-underline hover:no-underline text-lg font-bold" onclick="my_modal_2.showModal()">Details</button>
-          <dialog id="my_modal_2" class="modal">
+          <button class="btn btn-link mb-12 mt-2 text-primary-color no-underline hover:no-underline text-lg font-bold" onclick="banana.showModal()">Details</button>
+          <dialog id="banana" class="modal">
             <form method="dialog" class="modal-box">
-              <img src="./images/fruit6.png" class="mx-auto pt-14" alt="">
-              <h3 class="text-[2.5rem] font-extrabold text-h-color my-5">Apple</h3>
+              <img src="./images/fruit9.png" class="mx-auto pt-8" alt="">
+              <h3 class="text-[2.5rem] font-extrabold text-h-color my-5">Banana</h3>
               <p class="text-p-color font-medium w-3/4 mx-auto">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               <div class="rating rating-md rating-half mt-7">
                 <input type="radio" name="rating-10" class="rating-hidden" />
@@ -441,11 +442,11 @@
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" checked />
-                <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1"  checked />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
               </div>
               <div class="mt-7 mb-16 flex justify-center gap-5">
