card container updated

--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
     <!-- Deal Of the Section Start -->
 
     <section class="max-w-7xl mx-auto my-36">
+      <!-- Deal Content -->
       <div class="flex justify-between">
         <div class="w-1/2 mb-12">
           <h3 class="text-5xl font-extrabold text-[#121212] mb-6">Deal of the day</h3>
@@ -295,7 +296,7 @@
               </div>
               <div class="mt-7 mb-16 flex justify-center gap-5">
                 <form method="dialog" class=" modal-backdrop">
-                  <button class="btn btn-outline border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
+                  <button class="btn bg-white border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
                 </form>
                 <button class="btn bg-primary-color text-white hover:bg-primary-color">Buy Now</button>
               </div>
@@ -347,7 +348,7 @@
               </div>
               <div class="mt-7 mb-16 flex justify-center gap-5">
                 <form method="dialog" class=" modal-backdrop">
-                  <button class="btn btn-outline border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
+                  <button class="btn bg-white border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
                 </form>
                 <button class="btn bg-primary-color text-white hover:bg-primary-color">Buy Now</button>
               </div>
@@ -399,7 +400,7 @@
               </div>
               <div class="mt-7 mb-16 flex justify-center gap-5">
                 <form method="dialog" class=" modal-backdrop">
-                  <button class="btn btn-outline border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
+                  <button class="btn bg-white border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
                 </form>
                 <button class="btn bg-primary-color text-white hover:bg-primary-color">Buy Now</button>
               </div>
@@ -451,7 +452,7 @@
               </div>
               <div class="mt-7 mb-16 flex justify-center gap-5">
                 <form method="dialog" class=" modal-backdrop">
-                  <button class="btn btn-outline border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
+                  <button class="btn bg-white border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
                 </form>
                 <button class="btn bg-primary-color text-white hover:bg-primary-color">Buy Now</button>
               </div>
@@ -459,8 +460,11 @@
            
           </dialog>
         </div>
+      
       </div>
-
+      <div class=" flex justify-center ">
+        <button class="bg-primary-color mt-12 text-white text-xl font-extrabold py-4 px-7 text-center rounded-lg">Shop All</button>
+      </div>
     </section>
   </main>
   <footer>
