deal section updated for mobile device

--- a/index.html
+++ b/index.html
@@ -208,16 +208,15 @@
     <!-- Feature Section End -->
 
     <!-- Deal Of the Section Start -->
-
     <section class="max-w-7xl mx-auto my-36">
       <!-- Deal Content -->
-      <div class="flex justify-between">
-        <div class="w-1/2 mb-12">
-          <h3 class="text-5xl font-extrabold text-[#121212] mb-6">Deal of the day</h3>
-          <p class="font-medium text-[#0C0C0C99]">Contrary to popular belief, is not simply random text. It has roots in
+      <div class="flex flex-col lg:flex-row justify-between">
+        <div class="lg:w-1/2 mb-12">
+          <h3 class=" text-center lg:text-left text-5xl font-extrabold text-[#121212] mb-6">Deal of the day</h3>
+          <p class="text-center lg:text-left font-medium text-[#0C0C0C99]">Contrary to popular belief, is not simply random text. It has roots in
             a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
         </div>
-        <div>
+        <div class="flex justify-center mb-5">
           <div class="flex gap-5 text-center mt-5">
             <div class="flex-col ">
               <span class="countdown font-extrabold text[#121212] text-5xl">
@@ -249,7 +248,7 @@
         </div>
       </div>
       <!-- Card Container -->
-      <div class="text-center flex gap-6">
+      <div class="text-center flex flex-col gap-4 mx-5 lg:mx-0 lg:flex-row lg:gap-6">
         <!-- Card-1 -->
         <div class="card card-compact border border-[#0C0C0C1A] px-8">
           <figure>
