team section created

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </section>
     <!-- Feature Section End -->
 
-    <!-- Deal Of the Section Start -->
+    <!-- Deal Section Start -->
     <section class="max-w-7xl mx-auto my-36">
       <!-- Deal Content -->
       <div class="flex flex-col lg:flex-row justify-between">
@@ -463,6 +463,27 @@
       </div>
       <div class=" flex justify-center ">
         <button class="bg-primary-color mt-12 text-white text-xl font-extrabold py-4 px-7 text-center rounded-lg">Shop All</button>
+      </div>
+    </section>
+    <!-- Deal Section End -->
+
+    <!-- Team Section Start -->
+    <section class="max-w-7xl mx-auto my-36">
+      <div>
+        <div class="text-center mb-12">
+          <h3 class="font-extrabold text-5xl mb-6">Meet the team section</h3>
+          <p class="font-medium w-5/12 mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+        </div>
+        <div>
+          <div>
+            <img src="./images/member1.png" alt="">
+            <h4>Awlad Hossain</h4>
+            <p>Fruits Expert</p>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-square-twitter"></i>
+            <i class="fa-brands fa-linkedin"></i>
+          </div>
+        </div>
       </div>
     </section>
   </main>
