footer section responsive for mobile

--- a/index.html
+++ b/index.html
@@ -680,12 +680,12 @@
     </section>
   </main>
   <!-- Footer Section Start -->
-  <footer class="footer footer-center py-32 bg-[#121212]">
+  <footer class="footer footer-center py-10 lg:py-32 bg-[#121212]">
     <div class="flex justify-center gap-4 items-center">
       <img src="./images/logo.png" alt="">
       <h3 class="text-[2.5rem] font-bold text-white">Fruit Burst</h3>
     </div>
-    <div class="grid grid-flow-col gap-14 my-10 text-lg font-semibold text-white footer-nav">
+    <div class="flex flex-wrap justify-center lg:grid lg:grid-flow-col gap-9 lg:gap-14 lg:my-10 my-6 text-lg font-semibold text-white footer-nav">
       <a href="">Home</a> 
       <a href="">About Us</a> 
       <a href="">Shop</a> 
@@ -704,6 +704,7 @@
       </div>
     </div> 
   </footer>
+  <!-- Footer Section End -->
 </body>
 
 </html>
