--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
     <!-- Team Section End -->
 
     <!-- Why Choose Us Section Start -->
-    <section class="container mx-auto max-w-7xl mx-auto">
+    <section class="max-w-7xl mx-auto mb-32">
       <h3 class="text-5xl text-h-color font-extrabold text-center my-6">Why Choose Us</h3>
       <p class="font-medium text-p-color text-center w-2/5 mx-auto mb-10">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
       <div class="flex gap-12">
@@ -685,17 +685,17 @@
             </div>
           </div>
           <div class="flex items-center gap-5 mb-8">
-            <i class="fa-solid fa-user-group bg-gray-300 p-3 rounded-[50%]"></i>
+            <i class="fa-regular fa-heart bg-gray-300 p-3 rounded-[50%]"></i>
             <div>
-              <h4 class="text-2xl font-extrabold text-h-color">Dedicated Team</h4>
+              <h4 class="text-2xl font-extrabold text-h-color">Fresh is Best</h4>
               <hr class="mt-5 mb-4 w-24 bg-black">
               <p class="text-p-color font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
           </div>
           <div class="flex items-center gap-5">
-            <i class="fa-solid fa-user-group bg-gray-300 p-3 rounded-[50%]"></i>
+            <i class="fa-solid fa-gift bg-gray-300 p-3 rounded-[50%]"></i>
             <div>
-              <h4 class="text-2xl font-extrabold text-h-color">Dedicated Team</h4>
+              <h4 class="text-2xl font-extrabold text-h-color">Gift Certificates</h4>
               <hr class="mt-5 mb-4 w-24 bg-black">
               <p class="text-p-color font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
@@ -709,27 +709,27 @@
         <div class="text-right">
           <div class="flex items-center gap-5 mb-8 justify-end">
             <div>
-              <h4 class="text-2xl font-extrabold text-h-color">Dedicated Team</h4>
+              <h4 class="text-2xl font-extrabold text-h-color">Integrated Supplier</h4>
               <hr class="mt-5 mb-4 w-24 bg-black ml-auto">
               <p class="text-p-color font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
-            <i class="fa-solid fa-user-group bg-gray-300 p-3 rounded-[50%]"></i>
+            <i class="fa-solid fa-box-open bg-gray-300 p-3 rounded-[50%]"></i>
           </div>
           <div class="flex items-center gap-5 mb-8 justify-end">
             <div>
-              <h4 class="text-2xl font-extrabold text-h-color">Dedicated Team</h4>
+              <h4 class="text-2xl font-extrabold text-h-color">Sustainable Practice</h4>
               <hr class="mt-5 mb-4 w-24 bg-black ml-auto">
               <p class="text-p-color font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
-            <i class="fa-solid fa-user-group bg-gray-300 p-3 rounded-[50%]"></i>
+            <i class="fa-solid fa-ice-cream bg-gray-300 p-3 rounded-[50%]"></i>
           </div>
           <div class="flex items-center gap-5 justify-end">
             <div>
-              <h4 class="text-2xl font-extrabold text-h-color">Dedicated Team</h4>
+              <h4 class="text-2xl font-extrabold text-h-color">The Benefits Only</h4>
               <hr class="mt-5 mb-4 w-24 bg-black ml-auto">
               <p class="text-p-color font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
-            <i class="fa-solid fa-user-group bg-gray-300 p-3 rounded-[50%]"></i>
+            <i class="fa-regular fa-thumbs-up bg-gray-300 p-3 rounded-[50%]"></i>
           </div>
           
           
