why choose section responsive for mobile

--- a/index.html
+++ b/index.html
@@ -671,30 +671,31 @@
     <!-- Team Section End -->
 
     <!-- Why Choose Us Section Start -->
-    <section class="max-w-7xl mx-auto mb-32">
-      <h3 class="text-5xl text-h-color font-extrabold text-center my-6">Why Choose Us</h3>
-      <p class="font-medium text-p-color text-center w-2/5 mx-auto mb-10">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-      <div class="flex gap-12">
-        <div>
-          <div class="flex items-center gap-5 mb-8">
+    <section class="max-w-7xl mx-auto mb-9 lg:mb-32">
+      <h3 class="text-2xl lg:text-5xl text-h-color font-extrabold text-center my-6">Why Choose Us</h3>
+      <p class="font-medium text-p-color text-center w-2/3 lg:w-2/5 mx-auto mb-10">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+
+      <div class="flex flex-col lg:flex-row gap-12">
+        <div class="order-1 lg:order-none mx-16 lg:mx-0">
+          <div class="flex flex-col lg:flex-row items-center gap-5 mb-8">
             <i class="fa-solid fa-user-group bg-gray-300 p-3 rounded-[50%]"></i>
-            <div>
+            <div class="flex flex-col items-center text-center lg:text-left lg:items-start">
               <h4 class="text-2xl font-extrabold text-h-color">Dedicated Team</h4>
               <hr class="mt-5 mb-4 w-24 bg-black">
               <p class="text-p-color font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
           </div>
-          <div class="flex items-center gap-5 mb-8">
+          <div class="flex flex-col lg:flex-row items-center gap-5 mb-8">
             <i class="fa-regular fa-heart bg-gray-300 p-3 rounded-[50%]"></i>
-            <div>
+            <div class="flex flex-col items-center text-center lg:text-left lg:items-start">
               <h4 class="text-2xl font-extrabold text-h-color">Fresh is Best</h4>
               <hr class="mt-5 mb-4 w-24 bg-black">
               <p class="text-p-color font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
           </div>
-          <div class="flex items-center gap-5">
+          <div class="flex flex-col lg:flex-row items-center gap-5 mb-8">
             <i class="fa-solid fa-gift bg-gray-300 p-3 rounded-[50%]"></i>
-            <div>
+            <div class="flex flex-col items-center text-center lg:text-left lg:items-start">
               <h4 class="text-2xl font-extrabold text-h-color">Gift Certificates</h4>
               <hr class="mt-5 mb-4 w-24 bg-black">
               <p class="text-p-color font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
@@ -702,31 +703,31 @@
           </div>
         </div>
 
-        <div class="w-3/5">
+        <div class="lg:w-3/5 mx-5 lg:mx-0">
           <img src="./images/whychoose1.png" alt="">
         </div>
 
-        <div class="text-right">
-          <div class="flex items-center gap-5 mb-8 justify-end">
-            <div>
+        <div class="text-right order-2 lg:order-none mx-16 lg:mx-0">
+          <div class="flex flex-col-reverse lg:flex-row items-center gap-5 mb-8 justify-end">
+            <div class="flex flex-col items-center text-center lg:text-right lg:items-end">
               <h4 class="text-2xl font-extrabold text-h-color">Integrated Supplier</h4>
-              <hr class="mt-5 mb-4 w-24 bg-black ml-auto">
+              <hr class="mt-5 mb-4 w-24 bg-black lg:ml-auto">
               <p class="text-p-color font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
             <i class="fa-solid fa-box-open bg-gray-300 p-3 rounded-[50%]"></i>
           </div>
-          <div class="flex items-center gap-5 mb-8 justify-end">
-            <div>
+          <div class="flex flex-col-reverse lg:flex-row items-center gap-5 mb-8 justify-end">
+            <div class="flex flex-col items-center text-center lg:text-right lg:items-end">
               <h4 class="text-2xl font-extrabold text-h-color">Sustainable Practice</h4>
-              <hr class="mt-5 mb-4 w-24 bg-black ml-auto">
+              <hr class="mt-5 mb-4 w-24 bg-black lg:ml-auto">
               <p class="text-p-color font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
             <i class="fa-solid fa-ice-cream bg-gray-300 p-3 rounded-[50%]"></i>
           </div>
-          <div class="flex items-center gap-5 justify-end">
-            <div>
+          <div class="flex flex-col-reverse lg:flex-row items-center gap-5 mb-8 justify-end">
+            <div class="flex flex-col items-center text-center lg:text-right lg:items-end">
               <h4 class="text-2xl font-extrabold text-h-color">The Benefits Only</h4>
-              <hr class="mt-5 mb-4 w-24 bg-black ml-auto">
+              <hr class="mt-5 mb-4 w-24 bg-black lg:ml-auto">
               <p class="text-p-color font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
             <i class="fa-regular fa-thumbs-up bg-gray-300 p-3 rounded-[50%]"></i>
