--- a/index.html
+++ b/index.html
@@ -43,34 +43,50 @@
   <header class="max-w-7xl mx-auto">
     <!-- Navbar Start -->
 
-    <div class="navbar my-14 py-4 bg-primary-color rounded-[600px] px-5">
+    
       <!-- Nav For Small device -->
-      <!-- <div class="navbar-start items-center lg:hidden gap-3 w-1/2">
-                <img src="./images/logo.png" alt="">
-                <a class="normal-case text-2xl lg:text-[2.5rem] font-bold text-white">Fruit Burst</a>
-             </div>
-             <div class="flex justify-end lg:hidden navbar-end">
-              <div class="dropdown flex justify-end">
-                <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                  <li><a>Item 1</a></li>
-                  <li> <a>Parent</a></li>
-                  <li><a>Item 3</a></li>
-                </ul>
-                <button class="btn btn-square btn-ghost">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
-                </button>
+      <nav class="lg:hidden">
+        <div class="navbar bg-base-100">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <label tabindex="0" class="btn btn-ghost btn-circle">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
+              </label>
+              <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                <li><a>Homepage</a></li>
+                <li><a>Portfolio</a></li>
+                <li><a>About</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="navbar-center">
+            <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
+          </div>
+          <div class="navbar-end">
+            <button class="btn btn-ghost btn-circle">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
+            </button>
+            <button class="btn btn-ghost btn-circle">
+              <div class="indicator">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
+                <span class="badge badge-xs badge-primary indicator-item"></span>
               </div>
-            </div> -->
+            </button>
+          </div>
+        </div>
+       
+      </nav>
 
 
       <!-- Nav For large device -->
+      <div class="navbar my-14 py-4 bg-primary-color rounded-[600px] px-5">
       <div class=" w-2/5">
         <div class="navbar-center hidden lg:flex">
-          <ul class="menu menu-horizontal text-white ">
-            <li><a>Home</a></li>
-            <li><a>About Us</a></li>
-            <li><a>Shop</a></li>
-            <li><a>All Fruits</a></li>
+          <ul class="flex gap-8 text-white pl-2 ">
+            <li><a href="">Home</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Shop</a></li>
+            <li><a href>All Fruits</a></li>
           </ul>
         </div>
       </div>
@@ -82,7 +98,7 @@
         <div class="form-control relative">
           <input type="text" placeholder="Search here"
             class="input lg:w-72 rounded-[50px] text-[#12121266] input-bordered md:w-auto focus:outline-none" />
-          <i class="fa-solid fa-magnifying-glass absolute bottom-[14px] text-[#121212] right-4"></i>
+         <a href=""> <i class="fa-solid fa-magnifying-glass absolute bottom-[14px] text-[#121212] right-4"></i></a>
         </div>
       </div>
     </div>
