--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <label tabindex="0" class="btn btn-ghost btn-circle transition">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" /></svg>
             </label>
-            <ul tabindex="0" class="menu menu-sm right-0 dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+            <ul tabindex="0" class="menu menu-sm right-0 dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 flex-col font-medium gap-3">
               <li><a href="">Home</a></li>
               <li><a href="">About Us</a></li>
               <li><a href="">Shop</a></li>
@@ -705,7 +705,7 @@
           </div>
         </div>
 
-        <div class="lg:w-3/5 mx-5 lg:mx-0">
+        <div class="lg:w-3/5 mx-5 lg:mx-0 lg:mt-4">
           <img src="./images/whychoose1.png" alt="">
         </div>
 
