--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         </div>
       </div>
       <div class="lg:flex lg:items-center hidden lg:gap-3 flex-1 ">
-        <img src="./images/logo.png" alt="">
-        <a class="normal-case text-2xl lg:text-[2.5rem] font-bold text-white">Fruit Burst</a>
+        <a href=""><img src="./images/logo.png" alt=""></a>
+        <a href="" class="normal-case text-2xl lg:text-[2.5rem] font-bold text-white">Fruit Burst</a>
       </div>
       <div class="lg:flex lg:justify-center hidden">
         <div class="form-control relative">
@@ -281,11 +281,11 @@
             onclick="apple.showModal()">Details</button>
           <dialog id="apple" class="modal">
             <form method="dialog" class="modal-box">
-              <img src="./images/fruit6.png" class="mx-auto pt-8" alt="">
-              <h3 class="text-[2.5rem] font-extrabold text-h-color my-5">Apple</h3>
+              <img src="./images/fruit6.png" class="mx-auto lg:pt-8" alt="">
+              <h3 class="text-[2.5rem] font-extrabold text-h-color my-3 lg:my-5">Apple</h3>
               <p class="text-p-color font-medium w-3/4 mx-auto">Professional employees are there for you to pick the
                 most amazing and fresh fruits.</p>
-              <div class="rating rating-md rating-half mt-7">
+              <div class="rating rating-md rating-half mt-5 lg:mt-7">
                 <input type="radio" name="rating-10" class="rating-hidden" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
@@ -298,7 +298,7 @@
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
               </div>
-              <div class="mt-7 mb-16 flex justify-center gap-5">
+              <div class="mt-7 lg:mb-16 flex justify-center gap-5">
                 <form method="dialog" class=" modal-backdrop">
                   <button
                     class="btn bg-white border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
@@ -336,11 +336,11 @@
             onclick="orange.showModal()">Details</button>
           <dialog id="orange" class="modal">
             <form method="dialog" class="modal-box">
-              <img src="./images/fruit7.png" class="mx-auto pt-8" alt="">
-              <h3 class="text-[2.5rem] font-extrabold text-h-color my-5">Orange</h3>
+              <img src="./images/fruit7.png" class="mx-auto lg:pt-8" alt="">
+              <h3 class="text-[2.5rem] font-extrabold text-h-color my-3 lg:my-5">Orange</h3>
               <p class="text-p-color font-medium w-72 mx-auto">Professional employees are there for you to pick the most
                 amazing and fresh fruits.</p>
-              <div class="rating rating-md rating-half mt-7">
+              <div class="rating rating-md rating-half mt-5 lg:mt-7">
                 <input type="radio" name="rating-10" class="rating-hidden" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
@@ -353,7 +353,7 @@
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
               </div>
-              <div class="mt-7 mb-16 flex justify-center gap-5">
+              <div class="mt-7 lg:mb-16 flex justify-center gap-5">
                 <form method="dialog" class=" modal-backdrop">
                   <button
                     class="btn bg-white border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
@@ -391,11 +391,11 @@
             onclick="red_dragon.showModal()">Details</button>
           <dialog id="red_dragon" class="modal">
             <form method="dialog" class="modal-box">
-              <img src="./images/fruit8.png" class="mx-auto pt-8" alt="">
-              <h3 class="text-[2.5rem] font-extrabold text-h-color my-5">Red Dragon</h3>
+              <img src="./images/fruit8.png" class="mx-auto lg:pt-8" alt="">
+              <h3 class="text-[2.5rem] font-extrabold text-h-color my-3 lg:my-5">Red Dragon</h3>
               <p class="text-p-color font-medium w-3/4 mx-auto">Professional employees are there for you to pick the
                 most amazing and fresh fruits.</p>
-              <div class="rating rating-md rating-half mt-7">
+              <div class="rating rating-md rating-half mt-5 lg:mt-7">
                 <input type="radio" name="rating-10" class="rating-hidden" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
@@ -408,7 +408,7 @@
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" checked/>
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
               </div>
-              <div class="mt-7 mb-16 flex justify-center gap-5">
+              <div class="mt-7 lg:mb-16 flex justify-center gap-5">
                 <form method="dialog" class=" modal-backdrop">
                   <button
                     class="btn bg-white border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
@@ -446,11 +446,11 @@
             onclick="banana.showModal()">Details</button>
           <dialog id="banana" class="modal">
             <form method="dialog" class="modal-box">
-              <img src="./images/fruit9.png" class="mx-auto pt-8" alt="">
-              <h3 class="text-[2.5rem] font-extrabold text-h-color my-5">Banana</h3>
+              <img src="./images/fruit9.png" class="mx-auto lg:pt-8" alt="">
+              <h3 class="text-[2.5rem] font-extrabold text-h-color my-3 lg:my-5">Banana</h3>
               <p class="text-p-color font-medium w-3/4 mx-auto">Professional employees are there for you to pick the
                 most amazing and fresh fruits.</p>
-              <div class="rating rating-md rating-half mt-7">
+              <div class="rating rating-md rating-half mt-5 lg:mt-7">
                 <input type="radio" name="rating-10" class="rating-hidden" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
@@ -463,7 +463,7 @@
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
               </div>
-              <div class="mt-7 mb-16 flex justify-center gap-5">
+              <div class="mt-7 lg:mb-16 flex justify-center gap-5">
                 <form method="dialog" class=" modal-backdrop">
                   <button
                     class="btn bg-white border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
@@ -745,8 +745,8 @@
   <!-- Footer Section Start -->
   <footer class="footer footer-center py-10 lg:py-32 bg-[#121212]">
     <div class="flex justify-center gap-4 items-center">
-      <img src="./images/logo.png" alt="">
-      <h3 class="text-[2.5rem] font-bold text-white">Fruit Burst</h3>
+      <a href=""><img src="./images/logo.png" alt=""></a>
+      <a href=""><h3 class="text-[2.5rem] font-bold text-white">Fruit Burst</h3></a>
     </div>
     <div class="flex flex-wrap justify-center lg:grid lg:grid-flow-col gap-9 lg:gap-14 lg:my-10 my-6 text-lg font-semibold text-white footer-nav">
       <a href="">Home</a> 
